--- a/templates/account.html
+++ b/templates/account.html
@@ -1,12 +1,5 @@
 {% extends 'navside.html'%}
 {% block content%}
-<style>
-        .customer-photo{
-        border-radius: 50%;
-        max-height: 50px;
-        width: 50px;
-    }
-</style>
 <div class="container-fluid search_box">
     <form class="form-inline">
         <div class="row">
@@ -18,37 +11,25 @@
                 <thead class="thead-dark">
                     <tr>
                         <th class="th">#</th>
-<!--                                    <th class="th">Photo</th>-->
                         <th class="th">Name</th>
-                        <th class="th">Order-date</th>
-                        <th class="th">Number</th>
-                        <th class="th">Email</th>
+                        <th class="th">Total</th>
                         <th class="th">Advance</th>
                         <th class="th">Remaining</th>
-                        <th class="th">Total</th>
-
-
                         <style>
                             .th{
-                                text-align: left;
+                                text-align: center;
                             }
                         </style>
                     </tr>
                 </thead>
                 <tbody>
-                {% for cust in customer%}
                     <tr>
-                        <th scope="row">{{cust.id}}</th>
-<!--                                    <td><img src="/media/login.jpg" alt="" class="customer-photo" name="photo"></td>-->
-                        <td><a href="#"><label for="name" name="name">{{cust.name}}</label></a></td>
-                        <td><label for="order-date" name="order-date"></label></td>
-                        <td><label for="number" name="number">{{cust.number}}</label></td>
-                        <td><label for="email" name="email">{{cust.email}}</label></td>
+                        <th scope="row">1</th>
+                        <td><a href="#"><label for="name" name="name"></label></a></td>
                         <td><label for="total" name="total"></label></td>
                         <td><label for="advance" name="advance"></label></td>
                         <td><label for="remaning" name="remaining"></label></td>
                       </tr>
-                {% endfor%}
                 </tbody>
             </table>
         </div>
