--- a/templates/employee.html
+++ b/templates/employee.html
@@ -1,224 +1,81 @@
-{%load static%}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Employee</title>
-
-    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css'%}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/measurement.css'%}">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="{% static 'css/sidebar.css'%}">
-    <style>
-        .myfont{
-            font-family: Arial, Helvetica, sans-serif;
-            font-weight: 100;
-            text-align: center;
-        }
-        .card {
-        margin: 0 auto; 
-        float: none; 
-        margin-bottom: 10px;
-        max-width: 60rem ;
-        }
-        .employee_photo{
-            box-shadow:  5px 10px 18px grey;
-            border-radius: 50%;
-            margin-left: 3%;
-            width: 250px;
-            height: 250px;
-        }
-        .card-body{
-            margin-top: 50px;
-        }
-    </style>
-</head>
-
-<body>
-    <div class="page">
-        <!-- sidebar -->
-        <div class="sidebar">
-            <div class="sidebar-header">
-                <div class="sidebar-logo-container">
-                    <div class="logo-container">
-                        <img class="logo-sidebar" src="assets/img/logo.png" />
-                    </div>
-                    <div class="brand-name-container">
-                        <p class="brand-name">
-                            Collection & Creation<br>
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="sidebar-body">
-                <div class="user-title-container">
-                    <span class="brand-subname user-title">
-                        Tailor Management System
-                    </span>
-                </div>
-                <ul class="navigation-list">
-                    <li class="navigation-list-item">
-                        <a class="navigation-link" href="dashboard">
-                            <div class="row">
-                                <div class="col-2">
-                                    <i class="fa fa-tachometer"></i>
-                                </div>
-                                <div class="col-10">
-                                    Dashboard
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-                    <li class="navigation-list-item active">
-                        <a class="navigation-link" href="#">
-                            <div class="row">
-                                <div class="col-2">
-                                    <i class="fa fa-users"></i>
-                                </div>
-                                <div class="col-10">
-                                    Employees
-                                </div>
-                                
-                            </div>
-                        </a>
-                    </li>
-                    <li class="navigation-list-item">
-                        <a class="navigation-link" href="measurement">
-                            <div class="row">
-                                <div class="col-2">
-                                    <i class="fa fa-edit"></i>
-                                </div>
-                                <div class="col-10">
-                                    Measurement
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-                    <li class="navigation-list-item ">
-                        <a class="navigation-link" href="account">
-                            <div class="row">
-                                <div class="col-2">
-                                    <i class="fa fa-calculator"></i>
-                                </div>
-                                <div class="col-10">
-                                    Accounts
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-                    <li class="navigation-list-item">
-                        <a class="navigation-link" href="customer">
-                            <div class="row">
-                                <div class="col-2">
-                                    <i class="fa fa-address-book"></i>
-                                </div>
-                                <div class="col-10">
-                                    Customer
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-                </ul>
-                <hr style="color:rgb(255, 255, 255);margin-top:30px;">
-                
-                
-            </div>
+{% extends 'navside.html'%}
+{% block content%}
+<style>
+    .myfont{
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: 100;
+        text-align: center;
+    }
+    .card {
+    margin: 0 auto; 
+    float: none; 
+    margin-bottom: 10px;
+    max-width: 60rem ;
+    }
+    .employee_photo{
+        box-shadow:  5px 10px 18px grey;
+        border-radius: 50%;
+        margin-left: 3%;
+        width: 250px;
+        height: 250px;
+    }
+    .card-body{
+        margin-top: 50px;
+    }
+</style>
+<div class="container-fluid">
+    <!-- <div id="slide" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="/media/home.jpg" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="/media/login.jpg" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="/media/home.jpg" alt="Third slide">
+          </div>
         </div>
-        <!-- content -->
-        <div class="content">
-            <header class="navigationBar">
-                <div class="col-10">
-                    <button id="sidebarToggle" class="btn sidebarToggle">
-                        <i class="fa fa-bars"></i>
-                    </button>
+        <a class="carousel-control-prev" href="#slide" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#slide" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div> -->
+    <div class="card text-light bg-dark mb-3 row" >
+        <div class="card-header">
+            <h2 class="myfont">Employee Detail</h2>
+        </div>
+            <div class="card-body d-flex mx-auto row">
+                <div class="col-5 photo">
+                    <img src="/media/login.jpg" alt="No_Image_found" class="employee_photo">
                 </div>
-                <div class="col-2">
-                    <ul class="nav nav-pill">
-                        <li class="nav-item">
-                            <a class="nav-link link-dark" href="/">
-                                <i class="fa fa-comments"></i></a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link link-dark">
-                                <i class="fa fa-bell"></i></a>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link link-dark">
-                                <i class="fa fa-sign-out"></i></a>
-                            </a>
-                        </li>
-                </div>
-            </header>
-           
-            <div class="container-fluid">
-                <!-- <div id="slide" class="carousel slide" data-ride="carousel">
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img class="d-block w-100" src="/media/home.jpg" alt="First slide">
-                      </div>
-                      <div class="carousel-item">
-                        <img class="d-block w-100" src="/media/login.jpg" alt="Second slide">
-                      </div>
-                      <div class="carousel-item">
-                        <img class="d-block w-100" src="/media/home.jpg" alt="Third slide">
-                      </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#slide" role="button" data-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#slide" role="button" data-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Next</span>
-                    </a>
-                  </div> -->
-                <div class="card text-light bg-dark mb-3 row" >
-                    <div class="card-header">
-                        <h2 class="myfont">Employee Detail</h2>
-                    </div>
-                        <div class="card-body d-flex mx-auto row">
-                            <div class="col-5 photo">
-                                <img src="/media/login.jpg" alt="No_Image_found" class="employee_photo">
-                            </div>
-                            <div class="col-7 employee_info">
-                                <p class="employee_label">Name:</p><label for="name" name="name"></label>
-                                <p class="employee_label">Address:</p><label for="address" name="address"></label>
-                                <p class="employee_label">E-mail:</p><label for="email" name="email"></label>
-                                <p class="employee_label">Phone-number:</p><label for="number" name="number"></label>
-                            </div>
-                        </div>
-                        <div class="row mb-3 mx-1">
-                            <p class="employee_label">No. of Order Count:</p><label for="ordernumber" name="order_count"></label>
-                                
-                                <button class="btn btn-secondary mb-1">Send Measurement</button>
-                                <button class="btn btn-secondary">Email/Message</button>
-                        </div>
+                <div class="col-7 employee_info">
+                    <p class="employee_label">Name:</p><label for="name" name="name"></label>
+                    <p class="employee_label">Address:</p><label for="address" name="address"></label>
+                    <p class="employee_label">E-mail:</p><label for="email" name="email"></label>
+                    <p class="employee_label">Phone-number:</p><label for="number" name="number"></label>
                 </div>
             </div>
-            <div class="container-fluid ">
-                <form action="#" method="POST">
-                    {csrf_token}
-                 <div class="row mb-3 mx-1">           
-                    <Label for="buttons">To add and remove employee from employee list</Label>         
-                         <button class="btn btn-dark mb-1">Register</button>
-                         <button class="btn btn-dark">Remove</button>
-                 </div>
-                </form>
-             </div>
-        </div>          
+            <div class="row mb-3 mx-1">
+                <p class="employee_label">No. of Order Count:</p><label for="ordernumber" name="order_count"></label>
+                    
+                    <button class="btn btn-secondary mb-1">Send Measurement</button>
+                    <button class="btn btn-secondary">Email/Message</button>
+            </div>
     </div>
-    
-    
-</body>
-<!-- sidebar  --><script>
-        let sidebarToggle = document.querySelector(".sidebarToggle");
-        sidebarToggle.addEventListener("click", function(){
-            document.querySelector("body").classList.toggle("active");
-            document.getElementById("sidebarToggle").classList.toggle("active");
-        })
-    </script>
- 
-</html>
+</div>
+<div class="container-fluid ">
+    <form action="#" method="POST">
+        {csrf_token}
+     <div class="row mb-3 mx-1">           
+        <Label for="buttons">To add and remove employee from employee list</Label>         
+             <button class="btn btn-dark mb-1">Register</button>
+             <button class="btn btn-dark">Remove</button>
+     </div>
+    </form>
+ </div>
+ {%endblock%}
