--- a/templates/Measurement.html
+++ b/templates/Measurement.html
@@ -2,73 +2,77 @@
 {% block content%}
 {% if not reg%}
 <div class="form-box">
-    <form action="customer_store" method="POST"  enctype="multipart/form-data" class="needs-validation" novalidate>
+    <form action="customer_store" method="POST" enctype="multipart/form-data" class="needs-validation" novalidate>
         {% csrf_token %}
         <section class="customerDetail container-fluid row">
             <div class="info col-9 ">
                 <div class="row">
                     <div class="col-4 mb-3">
-                            <label for="name">Name</label>
-                            <input type="text" class="form-control" name="name" id="name" placeholder="Customer name" value="" required>
-                            <div class="valid-feedback">
+                        <label for="name">Name</label>
+                        <input type="text" class="form-control" name="name" id="name" placeholder="Customer name"
+                               value="" required>
+                        <div class="valid-feedback">
                             Looks good!
-                            </div>
-                            <div class="invalid-feedback">
-                                Please choose a Username.
-                            </div>
+                        </div>
+                        <div class="invalid-feedback">
+                            Please choose a Username.
+                        </div>
                     </div>
                     <div class="col-4 mb-3">
                         <label for="number">Mobile number</label>
-                        <input type="text" name="number" maxlength="10" class="form-control" id="ph-number" placeholder="Phone-number" value="" required>
+                        <input type="text" name="number" maxlength="10" class="form-control" id="ph-number"
+                               placeholder="Phone-number" value="" required>
                         <div class="valid-feedback">
-                        Looks good!
+                            Looks good!
                         </div>
                         <div class="invalid-feedback">
                             Please choose a Phone-number.
                         </div>
                     </div>
                     <div class="col-4 mb-3">
-                            <label for="email">Email</label>
-                            <input type="email" name="email" class="form-control" id="email" placeholder="Example@xyz.com" required>
-                            <div class="valid-feedback">
-                                Looks good!
-                                </div>
-                            <div class="invalid-feedback">
-                                Please choose a Email.
-                            </div>
+                        <label for="email">Email</label>
+                        <input type="email" name="email" class="form-control" id="email" placeholder="Example@xyz.com"
+                               required>
+                        <div class="valid-feedback">
+                            Looks good!
+                        </div>
+                        <div class="invalid-feedback">
+                            Please choose a Email.
+                        </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-4 mb-3">
                         <label for="name">Address</label>
-                        <input type="text" class="form-control" name="address" id="name" placeholder="Address" value="" required>
+                        <input type="text" class="form-control" name="address" id="name" placeholder="Address" value=""
+                               required>
                         <div class="valid-feedback">
-                        Looks good!
+                            Looks good!
                         </div>
                         <div class="invalid-feedback">
                             Please choose a Address.
                         </div>
                     </div>
                     <div class="col-4 mb-3">
-                            <label for="employee">Employee</label>
-                            <select name="employee" class="form-control" id="order-date" required placeholder="select">
-                                <option value="" disabled selected hidden> Choose Employee </option>
-                                {% for e in emp%}
-                                <option value={{e.id}}>{{e.name}}</option>
-                                {% endfor  %}
-                            </select>
-                            <div class="valid-feedback">
-                                Looks good!
-                            </div>
-                            <div class="invalid-feedback">
-                            Please provide a valid city.
-                            </div>
+                        <label for="employee">Employee</label>
+                        <select name="employee" class="form-control" id="order-date" required placeholder="select">
+                            <option value="" disabled selected hidden> Choose Employee</option>
+                            {% for e in emp%}
+                            <option value={{e.id}}>{{e.name}}</option>
+                            {% endfor %}
+                        </select>
+                        <div class="valid-feedback">
+                            Looks good!
                         </div>
+                        <div class="invalid-feedback">
+                            Please provide a valid city.
+                        </div>
+                    </div>
                     <div class="col-4 mb-3">
                         <label for="Deadline">Deadline</label>
                         <input type="date" class="form-control" name="deadline" id="Deadline" required>
                         <div class="invalid-feedback">
-                        Please provide a valid date.
+                            Please provide a valid date.
                         </div>
                         <div class="valid-feedback">
                             Looks good!
@@ -77,8 +81,8 @@
                 </div>
                 <div class="row">
                     <input id="uploadImage" type="file" name="image" onchange="PreviewImage(); required">
-                <div class="invalid-feedback">
-                    Please provide a image of product.
+                    <div class="invalid-feedback">
+                        Please provide a image of product.
                     </div>
                     <div class="valid-feedback">
                         Looks good!
@@ -92,69 +96,80 @@
 
         <section class="customer_measurement container-fluid row">
             <div class="measurement_table col-3">
-                <table class="table mytable"> 
+                <table class="table mytable">
                     <thead>
-                        <tr>
-                            <th class="th">Type</th>
-                            <th class="th">Data</th>
-                            <style>
+                    <tr>
+                        <th class="th">Type</th>
+                        <th class="th">Data</th>
+                        <style>
                                 .th{
                                     text-align: center;
                                 }
-                            </style>
-                        </tr>
+
+                        </style>
+                    </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td><label for="Shoulder">SH</label></td>
-                            <td><input type="number" name="shoulder" min="0"></td>
-                        </tr>
-                        <tr>
-                            <td><label for="Full-length">FL</label></td>
-                            <td><input type="number" name="full_length" min="0"></td>
-                        </tr>
-                        <tr>
-                            <td><label for="chest">Chest</label></td>
-                            <td><input type="number" name="chest"  min="0"></td>
-                        </tr>
-                        <tr>
-                            <td><label for="hip">Hip</label></td>
-                            <td><input type="number" name="hip"  min="0"></td>
-                        </tr>
-                        <tr>
-                            <td><label for="sl">Sl</label></td>
-                            <td><input type="number"  min="0" name="sl" id=""></td>
-                        </tr>
-                        <tr>
-                            <td><label for="m">M</label></td>
-                            <td><input type="number" min="0" name="m" id=""></td>
-                        </tr>
-                        <tr>
-                            <td><label for="ah">AH</label></td>
-                            <td><input type="number"  min="0" name="ah" id=""></td>
-                        </tr>
-                        <tr>
-                            <td><label for="open">Open</label></td>
-                            <td><input type="number"  min="0" name="open" id=""></td>
-                        </tr>
-                        <!-- <tr>
-                            <td><label for="fl">FL</label></td>
-                            <td><input type="number" name="" id=""></td>
-                        </tr> -->
-                        <tr>
-                            <td><label for="thigh">Thigh</label></td>
-                            <td><input type="number" name="thigh" min="0" id="thigh"></td>
-                        </tr>
-                        <tr>
-                            <td><label for="knee">Knee</label></td>
-                            <td><input type="number" name="knee" min="0" id=""></td>
-                        </tr>
+                    <tr>
+                        <td><label for="Shoulder">SH</label></td>
+                        <td><input type="number" name="shoulder" min="0"></td>
+                    </tr>
+                    <tr>
+                        <td><label for="Full-length">FL</label></td>
+                        <td><input type="number" name="full_length" min="0"></td>
+                    </tr>
+                    <tr>
+                        <td><label for="chest">Chest</label></td>
+                        <td><input type="number" name="chest" min="0"></td>
+                    </tr>
+                    <tr>
+                        <td><label for="hip">Hip</label></td>
+                        <td><input type="number" name="hip" min="0"></td>
+                    </tr>
+                    <tr>
+                        <td><label for="sl">Sl</label></td>
+                        <td><input type="number" min="0" name="sl" id=""></td>
+                    </tr>
+                    <tr>
+                        <td><label for="m">M</label></td>
+                        <td><input type="number" min="0" name="m" id=""></td>
+                    </tr>
+                    <tr>
+                        <td><label for="ah">AH</label></td>
+                        <td><input type="number" min="0" name="ah" id=""></td>
+                    </tr>
+                    <tr>
+                        <td><label for="open">Open</label></td>
+                        <td><input type="number" min="0" name="open" id=""></td>
+                    </tr>
+                    <!-- <tr>
+                        <td><label for="fl">FL</label></td>
+                        <td><input type="number" name="" id=""></td>
+                    </tr> -->
+                    <tr>
+                        <td><label for="thigh">Thigh</label></td>
+                        <td><input type="number" name="thigh" min="0" id="thigh"></td>
+                    </tr>
+                    <tr>
+                        <td><label for="knee">Knee</label></td>
+                        <td><input type="number" name="knee" min="0" id=""></td>
+                    </tr>
                     </tbody>
                 </table>
             </div>
             <div class="whiteboard col-9">
                 <div class="row">
-                    <!-- whiteboard -->
+                    <body>
+                    <div style="width: 600px; height: 550px;" id="wt-container"></div>
+
+                    <script src="https://www.whiteboard.team/dist/api.js"></script>
+                    <script type="text/javascript">
+                        var wt = new api.WhiteboardTeam('#wt-container', {
+                            clientId: 'b12786d751331e33ed4eed5ea8eb1827',
+                            boardCode: '361249e0-feca-4acb-8483-66cf4d2ad409'
+                        });
+                    </script>
+                    </body>
                 </div>
                 <div class="row"></div>
             </div>
@@ -170,9 +185,10 @@
     {% endif%}
     {% if reg%}
     <h1>Registered</h1>
-        {% endif %}
+    {% endif %}
 </div>
- <!-- Form  --><script>
+<!-- Form  -->
+<script>
         // Example starter JavaScript for disabling form submissions if there are invalid fields
         (function() {
           'use strict';
@@ -191,9 +207,10 @@
             });
           }, false);
         })();
-    </script> 
-    <!-- customer_photo -->
-    <script type="text/javascript">
+
+</script>
+<!-- customer_photo -->
+<script type="text/javascript">
 
         function PreviewImage() {
             var oFReader = new FileReader();
@@ -204,6 +221,7 @@
             };
         };
     
-    </script>
-    
+
+</script>
+
 {%endblock%}
