--- a/templates/signup.html
+++ b/templates/signup.html
@@ -65,6 +65,9 @@
     .regbtn{
         margin-left: 25px;
     }
+    /* add */
+   
+    /* addend */
 </style>
 <div class="container-fluid">
             {% if reg_comp%}
@@ -83,8 +86,9 @@
                             <div class="d-flex flex-column"><input type="text" name="c_number" placeholder=" Contact no."  pattern="[0-9]+" maxlength="10" class="form-control"></div>
                             <div class="d-flex flex-column"><input type="text" name="c_address" placeholder="Address" class="form-control"></div>
                             <div class="d-flex flex-column">
-                                <label class="form-control img_signup" for="file-input">Add Logo</label>
-                                <input  type="file" id="file-input" name="c_image" style="display: none;">
+                                <label class="form-control img_signup" for="file-input1">Insert Photo</label>
+                                <span id="imageName"></span>
+                                <input type="file" id="file-input1" name="c_image" onchange="filename()" style="display: none;">
                             </div>
                             <h4 class="d-flex justify-content-center mt-2">Proprietor Detail</h4>
                             <div class="d-flex flex-column"><input type="text" name="name" placeholder=" Name" class="form-control"></div>
@@ -94,15 +98,20 @@
                             <div class="d-flex flex-column"><input type="password" name="password" placeholder="Password" class="form-control"></div>
                             <div class="d-flex flex-column">
                                 <label class="form-control img_signup" for="file-input2">Insert Photo</label>
-                            <input type="file" id="file-input2" name="owner_image" style="display: none;">
-                        </div>
+                                <!-- <span id="imageName"></span> -->
+                                <input type="file" id="file-input2" name="owner_image" style="display: none;">
+                            </div>
                         <div class="d-flex flex-column justify-content-center regbtn mt-3 px-5"><button class="btn btn-primary">Register</button></div> 
                         </div>
-                        
                     </div>
-                    
                 </form>
             </div>
             {% endif %}
 </div>
 {%endblock%}
+<script>
+    function filename(){
+        var fn = document.getElementById("file-input1").file[0].name;
+        document.getElementById(imageName).setAttribute('value', fn);
+    }
+</script>
